# ambigram

./: LICENSE  README.md  pyproject.toml
src/: ambigram.py  utils.py
src/ambigram/: __init__.py  ambigram.py  utils.py
